Pointing at some new services

--- a/datasets/radarsat-1.yaml
+++ b/datasets/radarsat-1.yaml
@@ -1,13 +1,19 @@
 Name: RADARSAT-1
 Description: "Developed and operated by the Canadian Space Agency, it is Canada's first commercial Earth observation satellite 
 
+<br/>
+<br/>
+
 Développé et exploité par l'Agence spatiale canadienne, il s'agit du premier satellite commercial d'observation de la Terre au Canada."
 Documentation: https://www.asc-csa.gc.ca/eng/satellites/radarsat1/what-is-radarsat1.asp
 Contact: https://www.eodms-sgdot.nrcan-rncan.gc.ca
 ManagedBy: "[Natural Resources Canada](https://nrcan.gc.ca/)"
-UpdateFrequency: "Products are added on an adhoc basis driven by prioritized foreign repatriation efforts and new processing orders from the raw archive.
+UpdateFrequency: "NRCan opened a new [RADARSAT-1 Processing service](https://github.com/eodms-sgdot/radarsat-notebooks/blob/main/examples/radarsat1_l1_processing.ipynb) to the public on December 18, 2025. The processor allows users to produce image products from the original raw data archive free of charge, with the primary goal of making previously unprocessed data accessible for the first time.
 
-Les produits sont ajoutés de manière ponctuelle en fonction des efforts prioritaires de rapatriement à l'étranger et des nouvelles commandes de traitement à partir des archives brutes."
+<br/>
+<br/>
+
+RNCan a ouvert un nouveau [service de traitement RADARSAT-1](https://github.com/eodms-sgdot/radarsat-notebooks/blob/main/examples/radarsat1_l1_processing.ipynb) au public le 18 décembre 2025. Le processeur permet aux utilisateurs de produire des produits d'imagerie à partir des archives de données brutes originales gratuitement, avec l'objectif principal de rendre accessible pour la première fois les données jamais traitées auparavant."
 Collabs:
   ASDI:
     Tags:
@@ -31,20 +37,11 @@ Resources:
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title: PCI Geomatics Webinar | Cloud enabling earth observation archives
-      URL: https://www.youtube.com/watch?v=SvejDH5-Hic
-      AuthorName: CATALYST
-      AuthorURL: https://catalyst.earth
-      Services:
-  Tools & Applications:
-    - Title: EODMS RAPI Client Python Script
-      URL: https://github.com/nrcan-eodms-sgdot-rncan/eodms-rapi-orderdownload
-      AuthorName: Earth Observation Data Management System - Natural Resources Canada
-      AuthorURL: https://www.eodms-sgdot.nrcan-rncan.gc.ca/index-en.html                                        
-    - Title: RADARSTAC
-      URL: https://www.radarstac.com
-      AuthorName: Sparkgeo Consulting Inc. 
-      AuthorURL: https://sparkgeo.com/
+    - Title: RADARSAT-1 Processing Service | Service de traitement RADARSAT-1
+      URL: https://github.com/eodms-sgdot/radarsat-notebooks/blob/main/examples/radarsat1_l1_processing.ipynb
+      AuthorName: Canada Centre for Remote Sensing | Centre canadien de télédétection
+      AuthorURL: https://natural-resources.canada.ca/science-data/science-research/research-centres/canada-centre-remote-sensing
+  Tools & Applications:                                      
     - Title: QGIS
       URL: https://qgis.org
       AuthorName: German QGIS user group
