ok: Update smaht.yaml

--- a/datasets/smaht.yaml
+++ b/datasets/smaht.yaml
@@ -39,6 +39,7 @@ Tags:
   - life sciences
   - whole genome sequencing
   - bam
+  - aws-pds
 License: NIH Genomic Data Sharing Policy: https://gdc.cancer.gov/access-data/data-access-policies
 Citation: The SMaHT datasets were generated as part of the NIH Common Fund consortium initiative,
   Somatic Mosaicism across Human Tissues (SMaHT). The SMaHT datasets are submitted under dbGaP 
