--- a/datasets/smaht.yaml
+++ b/datasets/smaht.yaml
@@ -40,7 +40,7 @@ Tags:
   - whole genome sequencing
   - bam
   - aws-pds
-License: NIH Genomic Data Sharing Policy: https://gdc.cancer.gov/access-data/data-access-policies
+License: NIH Genomic Data Sharing Policy - https://gdc.cancer.gov/access-data/data-access-policies
 Citation: The SMaHT datasets were generated as part of the NIH Common Fund consortium initiative,
   Somatic Mosaicism across Human Tissues (SMaHT). The SMaHT datasets are submitted under dbGaP 
   studies (http://www.ncbi.nlm.nih.gov/gap), with the study accession numbers, phs004193 for the
