ok: Update smaht.yaml

--- a/datasets/smaht.yaml
+++ b/datasets/smaht.yaml
@@ -1,4 +1,4 @@
-Name: Somatic Mosaicism across Humnan Tissues (SMaHT)
+Name: Somatic Mosaicism across Human Tissues (SMaHT)
 Description: | 
   The Somatic Mosaicism across Human Tissues (SMaHT) project is an NIH Common
   Fund consortium (2023-) aimed to comprehensively characterize somatic variation
