--- a/datasets/noaa-s104.yaml
+++ b/datasets/noaa-s104.yaml
@@ -23,6 +23,7 @@ Tags:
   - hydrography
   - oceans
   - coastal
+  - water
 
 Resources:
   - Description: "NOAA S-104 Water Level for Surface Navigation Datasets"
