adding users and editing data entry

--- a/datasets/lemat-rho.yaml
+++ b/datasets/lemat-rho.yaml
@@ -24,7 +24,7 @@ DataAtWork:
     - Title: Accessing Data in LeMat-Rho AWS OpenData Repository 
       URL: https://github.com/LeMaterial/LeMat-Rho/blob/feat/aws-upload/scripts/aws-open-data.ipynb
       NotebookURL: https://github.com/LeMaterial/LeMat-Rho/blob/feat/aws-upload/scripts/aws-open-data.ipynb
-      AuthorName: Martin Siron, Mathilde Franckel, Jonathan Schmidt
+      AuthorName: Martin Siron, Mathilde Franckel, Jonathan Schmidt, Richard Tran, Daniel Speckhard, Georgia Channing, Guilherme Penedo
   Tools & Applications:
   - Title: Pymatgen
       URL: https://pymatgen.org
