--- a/datasets/dynamical-noaa-hrrr.yaml
+++ b/datasets/dynamical-noaa-hrrr.yaml
@@ -11,12 +11,13 @@ Description: |
     <p>These datasets have been translated to cloud-optimized Icechunk Zarr format by <a href="https://dynamical.org">dynamical.org</a>.</p>
     <p>When Icechunk 2.0 is released, these datasets will be updated correspondingly, and updated client libraries will be required for access. To be notified of dataset updates, subscribe to the <a href='https://dynamical.org/updates/'>mailing list</a>.</p>
     <ul>
-      <li><a href="https://dynamical.org/catalog/noaa-hrrr-forecast-48-hour/">NOAA HRRR forecast, 48 hour</a> - Weather forecasts from the High Resolution Rapid Refresh (HRRR) model operated by NOAA NWS NCEP.</li>
+      <li><a href="https://dynamical.org/catalog/noaa-hrrr-forecast-48-hour/">NOAA HRRR forecast, 48 hour</a> - Weather forecasts from the High-Resolution Rapid Refresh (HRRR) model operated by NOAA NWS NCEP.</li>
+      <li><a href="https://dynamical.org/catalog/noaa-hrrr-analysis/">NOAA HRRR analysis</a> - Analysis data from the High-Resolution Rapid Refresh (HRRR) model operated by NOAA NWS NCEP.</li>
     </ul>
 Documentation: https://dynamical.org/catalog/models/noaa-hrrr/
 Contact: feedback@dynamical.org
 ManagedBy: "[dynamical.org](https://dynamical.org)"
-UpdateFrequency: "NOAA HRRR forecast, 48 hour: Forecasts initialized every 6 hours"
+UpdateFrequency: "NOAA HRRR forecast, 48 hour: Forecasts initialized every 6 hours; NOAA HRRR analysis: 1 hour"
 Tags:
   - aws-pds
   - weather
@@ -42,6 +43,11 @@ DataAtWork:
     - Title: NOAA HRRR forecast, 48 hour python quickstart notebook
       URL: https://github.com/dynamical-org/notebooks/blob/main/noaa-hrrr-forecast-48-hour-icechunk.ipynb
       NotebookURL: https://github.com/dynamical-org/notebooks/blob/main/noaa-hrrr-forecast-48-hour-icechunk.ipynb
+      AuthorName: dynamical.org
+      AuthorURL: https://dynamical.org
+    - Title: NOAA HRRR analysis python quickstart notebook
+      URL: https://github.com/dynamical-org/notebooks/blob/main/noaa-hrrr-analysis-icechunk.ipynb
+      NotebookURL: https://github.com/dynamical-org/notebooks/blob/main/noaa-hrrr-analysis-icechunk.ipynb
       AuthorName: dynamical.org
       AuthorURL: https://dynamical.org
 ADXCategories:
