Add Open Targets Platform MCP

--- a/datasets/opentargets.yaml
+++ b/datasets/opentargets.yaml
@@ -67,6 +67,10 @@ DataAtWork:
       URL: https://api.platform.opentargets.org/
       AuthorName: Open Targets
       AuthorURL: https://github.com/opentargets/platform-api
+    - Title: Open Targets Platform MCP
+      URL: https://mcp.platform.opentargets.org/mcp/
+      AuthorName: Open Targets
+      AuthorURL: https://github.com/opentargets/open-targets-platform-mcp
   Publications:
     - Title: "Open Targets Platform: facilitating therapeutic hypotheses building in drug discovery"
       URL: https://doi.org/10.1093/nar/gkae1128
