Met Office PS47 dataset formatting

--- a/datasets/met-office-global-deterministic.yaml
+++ b/datasets/met-office-global-deterministic.yaml
@@ -1,6 +1,7 @@
 Name: Met Office Global Deterministic 10km on a 2-year rolling archive
-Description: |
+Description: |+
  THIS DATASET IS CHANGING
+
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
@@ -19,7 +20,7 @@ Description: |
  - every hour from 0 to 54 hours
  - every 3 hours from 57 to 144 hours
  - every 6 hours from 150 to 168 hours
-UpdateFrequency: |
+UpdateFrequency: |+
  The model is run four times each day, with forecast reference times of 00:00, 06:00, 12:00 and 18:00 (UTC).
 
  The runs at 00:00 and 12:00 provide data for the next 168 hours. The runs at 06:00 and 18:00 provide data for the next 67 hours.
