--- a/datasets/met-office-global-ensemble.yaml
+++ b/datasets/met-office-global-ensemble.yaml
@@ -1,7 +1,8 @@
 Name: Met Office Global Ensemble Prediction System (MOGREPS-G) on a 30-day rolling archive
-Description: |
+Description: |+
  THIS DATASET IS CHANGING
-  Files uploaded from late January 2026 onward will contain changes including:
+
+ Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
  - changes to existing parameters e.g. adding vertical levels and timesteps
