--- a/datasets/met-office-uk-deterministic.yaml
+++ b/datasets/met-office-uk-deterministic.yaml
@@ -1,6 +1,7 @@
 Name: Met Office UK Deterministic (UKV)2km on a 2-year rolling archive
-Description: |
+Description: |+
  THIS DATASET IS CHANGING
+ 
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
