--- a/datasets/met-office-uk-ensemble.yaml
+++ b/datasets/met-office-uk-ensemble.yaml
@@ -1,6 +1,7 @@
 Name: Met Office Global and Regional Ensemble Prediction System - UK (MOGREPS-UK) on a 30-day rolling archive
-Description: | 
+Description: |+ 
  THIS DATASET IS CHANGING
+ 
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
