--- a/datasets/noaa-nws-graphcastgfs-pds.yaml
+++ b/datasets/noaa-nws-graphcastgfs-pds.yaml
@@ -1,5 +1,9 @@
 Name: (EXPERIMENTAL) NOAA GraphCast Global Forecast System (GFS) (EXPERIMENTAL)
 Description: |
+  <h4>Update</h4>
+  Effective on December 17, 2025, the [NOAA/NWS National Centers for Environmental Prediction (NCEP) implemented three new models](https://www.weather.gov/media/notification/pdf_2025/scn25-89_AIGFS_AIGEFS_and_HGEFS.pdf): the Artificial Intelligence Global Forecast System (AIGFS), the Artificial Intelligence Global Ensemble Forecast System (AIGEFS), and the Hybrid Global Ensemble Forecast System (HGEFS). The AIGFS/AIGEFS are the operational replacement for EAGLE SOLO/Ensemble. Please note that the bucket for EAGLE Ensemble will continue hosting experimental forecasts to support ongoing EAGLE SOLO/Ensemble development once the models are ready.
+  <br/>
+  <br/>
   The GraphCast Global Forecast System (GraphCastGFS) is an experimental system set up by the National Centers for Environmental Prediction (NCEP) to produce medium range global forecasts. The horizontal resolution is a 0.25 degree latitude-longitude grid (about 28 km). The model runs 4 times a day at 00Z, 06Z, 12Z and 18Z cycles. Major atmospheric and surface fields including temperature, wind components, geopotential height, specific humidity, and vertical velocity, are available. The products are 6 hourly forecasts up to 10 days. The data format is GRIB2.
   <br/>
   <br/>
@@ -65,3 +69,4 @@ DataAtWork:
   Tutorials:
   Tools & Applications:
   Publications:
+
