Met Office dataset newline formatting fixes

--- a/datasets/met-office-global-deterministic.yaml
+++ b/datasets/met-office-global-deterministic.yaml
@@ -1,29 +1,29 @@
 Name: Met Office Global Deterministic 10km on a 2-year rolling archive
-Description: |+
- THIS DATASET IS CHANGING
+Description: |
+ THIS DATASET IS CHANGING<br><br>
 
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
  - changes to existing parameters e.g. adding vertical levels and timesteps
- - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels
+ - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels<br><br>
  
- Please check your systems are prepared for these changes.
+ Please check your systems are prepared for these changes.<br><br>
 
- A numerical weather prediction forecast for the whole globe, with a resolution of approximately 0.09 degrees i.e. 10km (2,560 x 1,920 grid points). The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don't recommend using it for any critical business purposes.
+ A numerical weather prediction forecast for the whole globe, with a resolution of approximately 0.09 degrees i.e. 10km (2,560 x 1,920 grid points). The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don't recommend using it for any critical business purposes.<br><br>
 
- The global deterministic model is a global configuration of the Unified Model, which is the Met Office’s flagship Numerical Weather Prediction model. The model’s initial state is kept close to the real atmosphere using hybrid 4D-Var data assimilation.
+ The global deterministic model is a global configuration of the Unified Model, which is the Met Office’s flagship Numerical Weather Prediction model. The model’s initial state is kept close to the real atmosphere using hybrid 4D-Var data assimilation.<br><br>
 
- The archive contains data from the past two years. The data is typically available approximately 3 to 6 hours after the model run time.
+ The archive contains data from the past two years. The data is typically available approximately 3 to 6 hours after the model run time.<br><br>
 
  The following timesteps are available for most parameters:
  - every hour from 0 to 54 hours
  - every 3 hours from 57 to 144 hours
  - every 6 hours from 150 to 168 hours
-UpdateFrequency: |+
- The model is run four times each day, with forecast reference times of 00:00, 06:00, 12:00 and 18:00 (UTC).
+UpdateFrequency: |
+ The model is run four times each day, with forecast reference times of 00:00, 06:00, 12:00 and 18:00 (UTC).<br><br>
 
- The runs at 00:00 and 12:00 provide data for the next 168 hours. The runs at 06:00 and 18:00 provide data for the next 67 hours.
+ The runs at 00:00 and 12:00 provide data for the next 168 hours. The runs at 06:00 and 18:00 provide data for the next 67 hours.<br><br>
 
  The forecast reference time represents the nominal data time or start time of a model forecast run, rather than the time when the data is available.
 License: "British Crown copyright 2023-2025, the Met Office, is licensed under [CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/deed.en)"
