--- a/datasets/met-office-global-ensemble.yaml
+++ b/datasets/met-office-global-ensemble.yaml
@@ -1,20 +1,20 @@
 Name: Met Office Global Ensemble Prediction System (MOGREPS-G) on a 30-day rolling archive
-Description: |+
- THIS DATASET IS CHANGING
+Description: |
+ THIS DATASET IS CHANGING<br><br>
 
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
  - changes to existing parameters e.g. adding vertical levels and timesteps
- - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels
+ - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels<br><br>
  
- Please check your systems are prepared for these changes.
+ Please check your systems are prepared for these changes.<br><br>
 
- A numerical weather prediction model that produces forecasts for the whole globe up to a week ahead. The projection used is the Equirectangular Latitude-Longitude and the grid resolution is 20km. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.
+ A numerical weather prediction model that produces forecasts for the whole globe up to a week ahead. The projection used is the Equirectangular Latitude-Longitude and the grid resolution is 20km. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.<br><br>
  
- Met Office Global Ensemble Prediction System (MOGREPS-G) is a global configuration of the Unified Model, which is the Met Office's flagship Numerical Weather Prediction model.
+ Met Office Global Ensemble Prediction System (MOGREPS-G) is a global configuration of the Unified Model, which is the Met Office's flagship Numerical Weather Prediction model.<br><br>
  
- The archive contains 30 days of data. The data is typically available approximately 10-11 hours after the model run time.
+ The archive contains 30 days of data. The data is typically available approximately 10-11 hours after the model run time.<br><br>
  
  The following timesteps are available:
  - Every hour from 0 to 54 hours or from 0 to 132 hours (depending on the parameter)
