--- a/datasets/met-office-uk-deterministic.yaml
+++ b/datasets/met-office-uk-deterministic.yaml
@@ -1,24 +1,24 @@
 Name: Met Office UK Deterministic (UKV)2km on a 2-year rolling archive
-Description: |+
- THIS DATASET IS CHANGING
+Description: |
+ THIS DATASET IS CHANGING<br><br>
  
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
  - changes to existing parameters e.g. adding vertical levels and timesteps
- - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels
+ - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels<br><br>
  
- Please check your systems are prepared for these changes.
+ Please check your systems are prepared for these changes.<br><br>
 
- A high-resolution gridded weather forecast for the UK, with a resolution of 0.018 degrees, projected on to a 2km horizontal grid. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.
+ A high-resolution gridded weather forecast for the UK, with a resolution of 0.018 degrees, projected on to a 2km horizontal grid. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.<br><br>
  
- Based on the Met Office UKV model, which is a deterministic, numerical weather prediction model for the UK and Ireland. It is a UK configuration of the Unified Model, which is the Met Office’s flagship Numerical Weather Prediction model.
+ Based on the Met Office UKV model, which is a deterministic, numerical weather prediction model for the UK and Ireland. It is a UK configuration of the Unified Model, which is the Met Office’s flagship Numerical Weather Prediction model.<br><br>
  
- The archive contains data from the past two years. The data is typically available approximately 3 to 6 hours after the model run time.
+ The archive contains data from the past two years. The data is typically available approximately 3 to 6 hours after the model run time.<br><br>
  
  The following timesteps are available:
  - every hour from 0 to 54 hours (for most parameters)
- - every 3 hours from 57 to 120 hours
+ - every 3 hours from 57 to 120 hours<br><br>
  
  For some parameters, data is available for multiple vertical height or pressure levels through the atmosphere.
 UpdateFrequency: |
