--- a/datasets/met-office-uk-ensemble.yaml
+++ b/datasets/met-office-uk-ensemble.yaml
@@ -1,23 +1,22 @@
 Name: Met Office Global and Regional Ensemble Prediction System - UK (MOGREPS-UK) on a 30-day rolling archive
-Description: |+ 
- THIS DATASET IS CHANGING
+Description: |
+ THIS DATASET IS CHANGING<br><br>
  
  Files uploaded from late January 2026 onward will contain changes including:
  - precision changes
  - new parameters
  - changes to existing parameters e.g. adding vertical levels and timesteps
- - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels
+ - the height_asl_on_pressure_levels parameter will be replaced by geopotential_height_on_pressure_levels<br><br>
  
- Please check your systems are prepared for these changes.
+ Please check your systems are prepared for these changes.<br><br>
 
- A numerical weather prediction model that produces forecasts for the UK for the next 5 days. Parameters including temperature, pressure, wind, humidity, etc. are forecast at grid points separated by about 2.2 km, and the model has multiple vertical levels. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.
+ A numerical weather prediction model that produces forecasts for the UK for the next 5 days. Parameters including temperature, pressure, wind, humidity, etc. are forecast at grid points separated by about 2.2 km, and the model has multiple vertical levels. The data is available as NetCDF files. It's offered on a free, unsupported basis, so we don’t recommend using it for any critical business purposes.<br><br>
 
- Met Office Global and Regional Ensemble Prediction System - UK (MOGREPS-UK) is a UK configuration of the Unified Model, which is the Met Office's flagship Numerical Weather Prediction model.
+ Met Office Global and Regional Ensemble Prediction System - UK (MOGREPS-UK) is a UK configuration of the Unified Model, which is the Met Office's flagship Numerical Weather Prediction model.<br><br>
  
- The archive contains 30 days of data. The data is typically available approximately 10-11 hours after the model run time.
+ The archive contains 30 days of data. The data is typically available approximately 10-11 hours after the model run time.<br><br>
  
  For most parameters, timesteps are provided every hour from 0 to 126 hours
-
 UpdateFrequency: The MOGREPS-UK model runs 24 times per day.
 License: "British Crown copyright 2025, the Met Office, is licensed under [CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/deed.en)"
 Documentation: https://www.metoffice.gov.uk/services/data/external-data-channels
