--- a/datasets/noaa-rrfs.yaml
+++ b/datasets/noaa-rrfs.yaml
@@ -7,31 +7,31 @@ Description: |
   This bucket provides access to real time, experimental RRFS prototype output.  And will provide access to final retrospective output once completed.<br/><br/>
   <hr/>
   
-  The real-time RRFS prototype is experimental and evolving. [<b> Real-time RRFS output will cease to be generated for several months beginning on ~3 December 2024.  This step is being taken to allow for final retrospective testing to be completed. </b>] It is not under 24x7 monitoring and is not operational. Output may be delayed or missing. Outputs will change. When significant changes to output take place, this description will be updated.<br/><br/>
+  The real-time RRFS prototype is experimental and evolving. It is not under 24x7 monitoring and is not operational. Output may be delayed or missing. Outputs will change. When significant changes to output take place, this description will be updated.<br/><br/>
 
-  We currently provide hourly deterministic forecasts at 3 km grid spacing out to 60 hours at 00, 06, 12, and 18 UTC, and out to 18 hours for other cycles. Output is organized by cycle date and cycle hour.
+  We currently provide hourly deterministic forecasts at 3 km grid spacing out to 84 hours at 00, 06, 12, and 18 UTC, and out to 18 hours for other cycles. Output is organized by cycle date and cycle hour.
   
-  For example, `rrfs_a/rrfs_a.20241201/12/control` contains the deterministic forecast initialized at 12 UTC on 01 December 2024. Users will find two types of output in GRIB2 format. The first is:<br/><br/>
-  `rrfs.t12z.natlev.f018.grib2` <br/><br/>
+  For example, `rrfs_a/rrfs.20260114/12` contains the deterministic forecast initialized at 12 UTC on 14 January 2026. Users will find two primary types of output in GRIB2 format. The first is:<br/><br/>
+  `rrfs.t12z.natlev.3km.f018.na.grib2` <br/><br/>
   
-  Meaning that this is the RRFS_A initialized at 12 UTC, covers the full North America domain, and is the native level post-processed gridded data at hour 18.  This output is on a rotated latitude-longitude grid at 3 km grid spacing.<br/><br/>
+  Meaning that this is the RRFS initialized at 12 UTC, covers the full North America domain, and is the native level post-processed gridded data at hour 18.  This output is on a rotated latitude-longitude grid at 3 km grid spacing.<br/><br/>
 
   The second output file in grib2 format is:<br/><br/>
   
-  `rrfs.t12z.prslev.f018.conus.grib2` <br/><br/>
+  `rrfs.t12z.prslev.3km.f018.conus.grib2` <br/><br/>
  
   The “prslev” descriptor indicates that this post-processed gridded data is output on pressure levels. The “conus” descriptor indicates that it covers the contiguous United States
 
-  For users interested in other domains, output is provided on the full 3-km North American grid and also subset over Alaska, Hawaii, and Puerto Rico. The files are identified as follows: <br/><br/>
+  For users interested in other domains, output is provided on the full 3-km North American grid and also for subset over Alaska, Hawaii, and Puerto Rico. The files are identified as follows: <br/><br/>
 
-  North America: `rrfs.t00z.prslev.f002.grib2`
-  Alaska: `rrfs.t00z.prslev.f002.ak.grib2`
-  Hawaii: `rrfs.t00z.prslev.f002.hi.grib2`
-  Puerto Rico: `rrfs.t00z.prslev.f002.pr.grib2`
+  North America: `rrfs.t00z.prslev.3km.f002.na.grib2`
+  Alaska: `rrfs.t00z.prslev.3km.f002.ak.grib2`
+  Hawaii: `rrfs.t00z.prslev.2p5km.f002.hi.grib2`
+  Puerto Rico: `rrfs.t00z.prslev.2p5km.f002.pr.grib2`
 
   <br/><br/>
 
-  Beginning on December 8th, 2023 we now provide prototype RRFSv1 ensemble output and products. Output is available for 00, 06, 12, and 18 UTC cycles, and is organized by cycle date and cycle hour. For example, `rrfs_a/rrfs_a.20231214/00/mem0001` contains the forecast from member 1, and `rrfs_a/rrfs_a.20231214/00/enspost_timelag` contains the ensemble products.
+  We also provide prototype RRFSv1 ensemble output and products. Output is available for 00, 06, 12, and 18 UTC cycles, and is organized by cycle date and cycle hour. For example, `rrfs_a/rrfsens.20260115/00/m001` contains the forecast from member 1, and `rrfs_a/refs.20260115/00/enspost_timelag` contains the combined ensemble products.
 
 Documentation: https://vlab.noaa.gov/web/ufs-r2o
 Contact: |
