--- a/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
+++ b/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
@@ -1,15 +1,16 @@
 Name: Vesuvius Challenge - CT Scans of Herculaneum Papyri
 Description: |
-  Reconstructed micro-CT volumes of carbonized Herculaneum papyri produced for the
-  Vesuvius Challenge. The scanned library of scrolls survived the volcanic eruption
-  of Vesuvius in 79 AD and is the only "intact" library coming from ancient times.
-  Volumetric reconstructions are distributed as OME-Zarr multiscale datasets to support
-  virtual unwrapping, segmentation, and text recovery research on ancient scrolls.
-  Reading these scrolls could change forever our knowledge of Roman History.
+  This dataset contains reconstructed micro-CT volumes of carbonized Herculaneum papyri
+  produced as part of the Vesuvius Challenge. The scanned scroll library survived the
+  eruption of Mount Vesuvius in AD 79. It is the only intact library known to have
+  survived from antiquity.
+  The volumetric reconstructions are distributed as OME-Zarr multiscale datasets to support
+  research in virtual unwrapping, segmentation, and text recovery of ancient scrolls.
+  Deciphering these scrolls could forever change our understanding of Roman history.
 Documentation: https://scrollprize.org/data # TODO: to update
 Contact: https://scrollprize.org/
 ManagedBy: "[Vesuvius Challenge](https://scrollprize.org/)"
-UpdateFrequency: As new papyri are scanned and reconstructed.
+UpdateFrequency: As additional papyri are scanned and reconstructed.
 Tags:
   - aws-pds
   - cultural preservation
