Add `- dynamical.org Icechunk Zarr` to dynamical dataset names
To avoid confusion with existing NOAA datasets on the registry.

--- a/datasets/dynamical-ecmwf-ifs-ens.yaml
+++ b/datasets/dynamical-ecmwf-ifs-ens.yaml
@@ -1,4 +1,4 @@
-Name: ECMWF IFS ENS
+Name: ECMWF IFS ENS - dynamical.org Icechunk Zarr
 Description: |
     <p>
        The Integrated Forecasting System (IFS) is a global forecast model developed 
