--- a/datasets/dynamical-noaa-gefs.yaml
+++ b/datasets/dynamical-noaa-gefs.yaml
@@ -1,4 +1,4 @@
-Name: NOAA GEFS
+Name: NOAA GEFS - dynamical.org Icechunk Zarr
 Description: |
     <p>
       The Global Ensemble Forecast System (GEFS) is a National Oceanic and
