--- a/datasets/dynamical-noaa-gfs.yaml
+++ b/datasets/dynamical-noaa-gfs.yaml
@@ -1,4 +1,4 @@
-Name: NOAA GFS
+Name: NOAA GFS - dynamical.org Icechunk Zarr
 Description: |
     <p>
       The Global Forecast System (GFS) is a National Oceanic and Atmospheric
