--- a/datasets/dynamical-noaa-hrrr.yaml
+++ b/datasets/dynamical-noaa-hrrr.yaml
@@ -1,4 +1,4 @@
-Name: NOAA HRRR
+Name: NOAA HRRR - dynamical.org Icechunk Zarr
 Description: |
     <p>
       The High-Resolution Rapid Refresh (HRRR) is a NOAA real-time 3-km resolution,
