BossDB and EMBER Get-to-know-a-dataset Notebooks

--- a/datasets/ember.yaml
+++ b/datasets/ember.yaml
@@ -45,3 +45,9 @@ DataAtWork:
     - Title: Mapping the landscape of social behavior
       URL: https://pubmed.ncbi.nlm.nih.gov/40043703/
       AuthorName: Ugne Klibaite, Tianqing Li, Diego Aldarondo, Jumana F Akoad, Bence P Ölveczky, Timothy W Dunn. 
+  Tutorials:
+    - Title: Get To Know A Dataset - EMBER
+      URL: https://github.com/aplbrain/BBQS-EMBER-cookbook/blob/main/examples/get-to-know-a-dataset-ember.ipynb
+      NotebookURL: https://github.com/aplbrain/BBQS-EMBER-cookbook/blob/main/examples/get-to-know-a-dataset-ember.ipynb
+      AuthorName: EMBER Team
+      AuthorURL: https://github.com/aplbrain
