--- a/datasets/bossdb.yaml
+++ b/datasets/bossdb.yaml
@@ -26,6 +26,11 @@ Resources:
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
+    - Title: Get To Know A Dataset - BossDB
+      URL: https://github.com/aplbrain/bossdb_cookbook/blob/main/notebooks/Get-to-know-a-dataset-template.ipynb
+      NotebookURL: https://github.com/aplbrain/bossdb_cookbook/blob/main/notebooks/Get-to-know-a-dataset-template.ipynb
+      AuthorName: BossDB Team
+      AuthorURL: https://github.com/aplbrain
     - Title: Data access and download
       URL: https://bossdb.org/get-started
       AuthorName: Jordan Matelsky
