--- a/tags.yaml
+++ b/tags.yaml
@@ -71,6 +71,7 @@
 - cloud computing
 - CMIP5
 - CMIP6
+- coal
 - coastal
 - code completion
 - cog
@@ -133,6 +134,7 @@
 - Drosophila melanogaster
 - dsm
 - dtm
+- duckdb
 - earth observation
 - earthquakes
 - economics
@@ -304,6 +306,7 @@
 - NASA Center for Climate Simulation (NCCS)
 - NASA SMD AI
 - national archives catalog
+- natural gas
 - natural language processing
 - natural resource
 - near-surface air temperature
