Add new suggested tags.

--- a/datasets/catalyst-cooperative-pudl.yaml
+++ b/datasets/catalyst-cooperative-pudl.yaml
@@ -51,11 +51,11 @@ Tags:
   - EIA
   - electric grid
   - energy efficiency
-  - energy information administration
+  - Energy Information Administration
   - energy storage
-  - environmental protection agency
+  - Environmental Protection Agency
   - EPA
-  - federal energy regulatory commission
+  - Federal Energy Regulatory Commission
   - FERC
   - greenhouse gas
   - hydroelectric
@@ -63,6 +63,7 @@ Tags:
   - natural gas
   - oil
   - ownership
+  - petroleum
   - photovoltaics
   - pipeline
   - pollution
