--- a/tags.yaml
+++ b/tags.yaml
@@ -35,6 +35,7 @@
 - bacteria
 - bam
 - bathymetry
+- batteries
 - benchmark
 - bias
 - biodiversity
@@ -142,17 +143,25 @@
 - ecosystems
 - education
 - EEIO
+- EIA
 - electricity
+- electric grid
 - electron microscopy
 - electron tomography
 - electrophysiology
 - elevation
 - email
+- emissions
+- energy efficiency
+- Energy Information Administration
+- energy storage
 - encyclopedic
 - energy
 - energy modeling
 - environmental
+- Environmental Protection Agency
 - enzyme
+- EPA
 - epigenomics
 - ethereum
 - ethnicity
@@ -165,6 +174,8 @@
 - fast5
 - fasta
 - fastq
+- Federal Energy Regulatory Commission
+- FERC
 - fewshot
 - financial markets
 - fisheries
@@ -203,6 +214,7 @@
 - grand-challenge.org
 - graph
 - green aviation
+- greenhouse gas
 - ground water
 - group quarters
 - h5
@@ -224,6 +236,7 @@
 - housing units
 - HPC
 - HYCOM
+- hydroelectric
 - hydrography
 - hydrologic model
 - hydrology
@@ -281,6 +294,7 @@
 - metadata
 - metagenomics
 - meteorological
+- methane
 - microbial genomics
 - microbiome
 - microcircuit modeling and simulation
@@ -333,6 +347,7 @@
 - ocean sea surface height
 - ocean simulation
 - oceans
+- oil
 - online shopping
 - open source software
 - opendap
@@ -341,16 +356,21 @@
 - orbit
 - organelle
 - osm
+- ownership
 - parquet
 - pbi
 - pediatric
 - perception
 - peril
+- petroleum
 - pharmaceutical
+- photovoltaics
 - physical
 - physics
+- pipeline
 - planetary
 - politics
+- pollution
 - population
 - population genetics
 - post-processing
@@ -435,6 +455,7 @@
 - trading
 - traffic
 - transcriptomics
+- transmission
 - transparency
 - transportation
 - turbulence
@@ -457,6 +478,7 @@
 - web archive
 - whole exome sequencing
 - whole genome sequencing
+- wind
 - wildlife
 - word embeddings
 - workload analysis
